--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +20,6 @@
     </form>
 
 </div>
-<script src="/static/js/login.js"></script> <!-- En la página de login -->
+<script src="/app.js"></script> <!-- En la página de login -->
 </body>
 </html>
